# indradb

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.server  Makefile  README.md  tarpaulin.toml  test.sh
.github/workflows/: pr-test.yml  release.yml  test.yml
benches/: pg.rs  rdb.rs
benches/common/: benches.rs  macros.rs
ci/: before_deploy.sh  before_script.sh  install.sh  test.py
client/: Cargo.toml
client/src/: errors.rs  main.rs
lib/: Cargo.toml  README.md  test.sh
lib/benches/: memory.rs  pg.rs  rdb.rs
lib/benches/common/: benches.rs  macros.rs  mod.rs
lib/fuzz/: Cargo.toml
lib/fuzz/fuzz_targets/: compare.rs
lib/src/: bytes.rs  compat.rs  database.rs  datastore.rs  errors.rs  lib.rs  plugin.rs  serializer.rs  traits.rs  tree.rs  treelike.rs  util.rs
lib/src/benches/: benches.rs  macros.rs
lib/src/memory/: benches.rs  datastore.rs  mod.rs  tests.rs
lib/src/models/: bulk_insert.rs  edges.rs  identifiers.rs  ids.rs  internal.rs  json.rs  metadata.rs  mod.rs  properties.rs  queries.rs  sets.rs  types.rs  vertices.rs  weights.rs
lib/src/pg/: benches.rs  converters.rs  datastore.rs  instance.rs  mod.rs  schema.rs  tests.rs  util.rs
lib/src/rdb/: benches.rs  bytes.rs  datastore.rs  instance.rs  keys.rs  managers.rs  mod.rs  tests.rs
lib/src/sld/: datastore.rs  managers.rs  mod.rs
lib/src/sledds/: datastore.rs  managers.rs  mod.rs
lib/src/tests/: account.rs  bulk_insert.rs  count.rs  edge.rs  include_query.rs  indexing.rs  macros.rs  metadata.rs  mod.rs  properties.rs  sandbox.rs  sync.rs  util.rs  vertex.rs
plugins/centrality/: Cargo.toml
plugins/centrality/src/: lib.rs
plugins/hello_world/: Cargo.toml
plugins/hello_world/src/: lib.rs
plugins/host/: Cargo.toml  build.rs
plugins/host/src/: decl.rs  errors.rs  lib.rs  util.rs
plugins/map_reduce/: Cargo.toml
plugins/map_reduce/src/: lib.rs
plugins/map_reduce_vertex_count/: Cargo.toml
plugins/map_reduce_vertex_count/src/: lib.rs
plugins/map_util/: Cargo.toml
plugins/map_util/src/: lib.rs
plugins/naive_vertex_count/: Cargo.toml
plugins/naive_vertex_count/src/: lib.rs
plugins/testing/: Cargo.toml
plugins/testing/src/: main.rs
proto/: Cargo.toml  README.md  build.rs  indradb.capnp  indradb.proto
proto/benches/: api.rs
proto/src/: client.rs  converters.rs  lib.rs  server.rs  tests.rs  util.rs
proto/src/scripting/: api.rs  converters.rs  engine.rs  globals.rs  mod.rs
proto/test_scripts/: commit_first.lua  commit_second.lua  create_vertex.lua  delete_edges.lua  delete_vertices.lua  edge_metadata.lua  get_edge_count.lua  get_edges.lua  get_edges_bad_high.lua  get_edges_bad_low.lua  get_vertices.lua  return_array.lua  return_boolean.lua  return_coroutine.lua  return_function.lua  return_int.lua  return_nil.lua  return_number.lua  return_obj.lua  return_string.lua  set_and_get_edge.lua  vertex_metadata.lua
scripts/: before_deploy.sh  ci-bundle-binaries.sh  ci.sh  ci_install.sh  install.sh  test.py  test.sh  update_version.py
server/: Cargo.toml
server/src/: cli.rs  main.rs
server/tests/: plugins.rs
src/: datastore.rs  datastore_test.rs  errors.rs  lib.rs  models.rs  requests.rs  responses.rs  traits.rs  util.rs
src/account/: main.rs
src/common/: datastore.rs  lib.rs  macros.rs
src/datastore/: bench_fns.rs  mod.rs  models.rs  test_account.rs  test_edge.rs  test_edge_range.rs  test_fns.rs  test_macros.rs  test_metadata.rs  test_reversed_edge_range.rs  test_sandbox.rs  test_util.rs  test_vertex.rs  traits.rs
src/datastore/tests/: account.rs  benchmarks.rs  edge.rs  edge_range.rs  macros.rs  metadata.rs  mod.rs  reversed_edge_range.rs  sandbox.rs  util.rs  vertex.rs  vertex_query.rs  vertex_range.rs
src/db/: main.rs
src/pg/: converters.rs  datastore.rs  mod.rs  schema.rs  tests.rs  util.rs
src/rdb/: converters.rs  datastore.rs  keys.rs  macros.rs  managers.rs  mod.rs  models.rs  tests.rs
src/rocksdb/: datastore.rs  mod.rs  models.rs  tests.rs
src/server/: datastore.rs  http.rs  main.rs  scripts.rs  statics.rs  util.rs
src/server/http/: middleware.rs  mod.rs  rest.rs  transaction.rs  util.rs
src/server/script/: api.rs  errors.rs  macros.rs  mod.rs  util.rs
src/tests/: account.rs  edge.rs  macros.rs  metadata.rs  mod.rs  sandbox.rs  util.rs  vertex.rs
src/user/: main.rs
support/: create_pg_db.sh  schema.sql  test_script_runner.py  test_scripts.py  test_server.py  util.py  with_server.sh
support/test_scripts/: create_vertex_bad_properties.lua  create_vertex_bad_type.lua  delete_edge.lua  get_edge_range.lua  get_edge_range_bad_offset.lua  get_edge_time_range_bad_low.lua  get_vertex_bad_id.lua  global_metadata.lua  return_array.lua  return_obj_with_bad_values.lua  return_string.lua  set_and_get_edge.lua  set_edge_bad_weight.lua  set_vertex.lua
test_scripts/: account_metadata.lua  create_vertex.lua  delete_edge.lua  delete_edges.lua  delete_vertex.lua  delete_vertices.lua  edge_metadata.lua  get_edge_count.lua  get_edge_range.lua  get_edge_range_bad_high.lua  get_edge_range_bad_limit.lua  get_edge_range_bad_low.lua  get_edge_range_bad_offset.lua  get_edge_time_range.lua  get_edge_time_range_bad_high.lua  get_edge_time_range_bad_low.lua  get_edges.lua  get_edges_bad_high.lua  get_reversed_edge_count.lua  get_reversed_edge_range.lua  get_reversed_edge_range_bad_limit.lua  get_reversed_edge_range_bad_low.lua  get_reversed_edge_range_bad_offset.lua  get_reversed_edge_time_range.lua  get_reversed_edge_time_range_bad_high.lua  get_reversed_edge_time_range_bad_low.lua  get_vertex.lua  get_vertex_bad_id.lua  get_vertex_range.lua  get_vertices.lua  global_metadata.lua  local_metadata.lua  queries.lua  regression_float_serialization.lua  return_array.lua  return_boolean.lua  return_function.lua  return_obj.lua  set_and_get_edge.lua  set_edge_bad_weight.lua  (+3 more)
tests/: batch.rs  rest.rs  scripts.rs  test_batch.rs  test_rest.rs  test_scripts.rs
tests/common/: accounts.rs  datastore.rs  http.rs  macros.rs  mod.rs
