[package]
name = "braid"
version = "0.2.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]

[[bin]]
name = "braid-db"
path = "src/db/main.rs"

[[bin]]
name = "braid-server"
path = "src/server/main.rs"

[[bin]]
name = "braid-account"
path = "src/account/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
iron = "~0.5.1"
hyper = "~0.10.4"
serde = "~0.9.7"
serde_json = "~0.9.6"
serde_derive = "~0.9.7"
urlencoded = "~0.5.0"
libc = "~0.2.18"
rand = "~0.3.15"
regex = "~0.2.1"
clap = "^2.20.4"
lazy_static = "~0.2.2"
router = "~0.5.1"

[dev-dependencies]
maplit = "~0.1.4"

[dependencies.chrono]
version = "~0.3.0"
features = ["serde"]

[dependencies.braid-lib]
git = "https://github.com/braidery/lib.git"
branch = "master"

[dependencies.lua]
git = "https://github.com/kballard/rust-lua.git"

[dependencies.uuid]
version = "~0.4.0"
features = ["serde", "v4"]

[replace]
"postgres:0.13.6" = { git = "https://github.com/sfackler/rust-postgres" }
