[package]
name = "braid-lib"
version = "0.2.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]

[lib]
name = "braid"
path = "src/lib.rs"

[features]
default = ["postgres-datastore", "rocksdb-datastore"]
postgres-datastore = ["postgres", "r2d2", "r2d2_postgres", "num_cpus"]
rocksdb-datastore = ["rocksdb", "librocksdb-sys", "bincode", "lazy_static", "byteorder"]

[dependencies]
rust-crypto = "~0.2.36"
serde = "^1.0.2"
serde_json = "^1.0.1"
serde_derive = "^1.0.2"
libc = "~0.2.22"
rand = "~0.3.15"
regex = "~0.2.1"

# Postgres dependencies
r2d2 = { version = "0.7.2", optional = true }
r2d2_postgres = { version = "0.12.0", optional = true }
num_cpus = { version = "^1.4.0", optional = true }

# Rocksdb dependencies
rocksdb = { version = "0.6.1", optional = true }
librocksdb-sys = { version = "0.4.1", optional = true }
lazy_static = { version = "0.2.8", optional = true }
byteorder = { version = "^1.0.0", optional = true }

[dependencies.chrono]
version = "0.3.1"
features = ["serde"]

[dependencies.bincode]
version = "0.8.0"
optional = true
features = ["serde"]

[dependencies.uuid]
version = ">=0.5,<0.6"
features = ["serde", "v4"]

[dependencies.postgres]
version = "0.14.1"
features = ["with-serde_json", "with-chrono", "with-uuid"]
optional = true
