[package]
name = "braid"
version = "0.3.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]

[[bin]]
name = "braid-db"
path = "src/db/main.rs"

[[bin]]
name = "braid-server"
path = "src/server/main.rs"

[[bin]]
name = "braid-account"
path = "src/account/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
serde = "^1.0.2"
serde_json = "^1.0.1"
serde_derive = "^1.0.2"
libc = "0.2.22"
rand = "~0.3.15"
regex = "~0.2.1"
iron = "0.5.1"
hyper = "0.10.10"
urlencoded = "0.5.0"
clap = "^2.24.1"
lazy_static = "~0.2.8"
router = "~0.5.1"

[dev-dependencies]
maplit = "0.1.4"

[dependencies.chrono]
version = "0.3.1"
features = ["serde"]

[dependencies.braid-lib]
git = "https://github.com/braidery/braid-lib.git"
branch = "master"

[dependencies.lua]
git = "https://github.com/kballard/rust-lua.git"

[dependencies.uuid]
version = "0.5.0"
features = ["serde", "v4"]
