[package]
name = "indradb-client"
version = "4.0.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
description = "CLI client for IndraDB"
homepage = "https://indradb.github.io"
repository = "https://github.com/indradb/indradb"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]
license = "MPL-2.0"
edition = "2021"
readme = "../README.md"

[[bin]]
name = "indradb-client"
path = "src/main.rs"

[dependencies]
clap = "2.34.0"
tonic = "0.11.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["serde"] }

[dependencies.indradb-lib]
path = "../lib"
version = "4.0.0"
features = ["rocksdb-datastore"]

[dependencies.indradb-proto]
path = "../proto"
version = "4.0.0"
features = ["client"]