[package]
name = "indradb-lib"
version = "3.0.3"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
description = "A graph database library"
homepage = "https://indradb.github.io"
repository = "https://github.com/indradb/indradb"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]
license = "MPL-2.0"
edition = "2021"
readme = "README.md"

[lib]
name = "indradb"
path = "src/lib.rs"

[features]
default = []
rocksdb-datastore = ["rocksdb"]
test-suite = []
bench-suite = []

[dependencies]
byteorder = "^1.4.2"
serde = { version = "^1.0.57", features = ["derive"] }
serde_json = "^1.0.57"
lazy_static = "^1.4.0"
chrono = { version = "0.4.22", features = ["serde"] }
bincode = "^1.3.3"
rmp-serde = "1.1.1"
tempfile = "^3.2.0"

# Rocksdb dependencies
rocksdb = { version = "0.19.0", optional = true }