[package]
name = "indradb-lib"
version = "3.0.4"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
description = "A graph database library"
homepage = "https://indradb.github.io"
repository = "https://github.com/indradb/indradb"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]
license = "MPL-2.0"
edition = "2021"
readme = "README.md"

[lib]
name = "indradb"
path = "src/lib.rs"

[features]
default = []
rocksdb-datastore = ["rocksdb", "bincode"]
multi-slot = ["blake3"]
test-suite = []
bench-suite = []

[dependencies]
blake3 = { version = "1.3", optional = true }
byteorder = "^1.4.2"
serde = { version = "^1.0.57", features = ["derive"] }
serde_json = "^1.0.57"
lazy_static = "^1.4.0"
rmp-serde = "1.1.1"
tempfile = "^3.2.0"
uuid = { version = "^1.2.2", features = ["v1", "serde"] }
once_cell = { version = "1.17", features = [ "parking_lot" ] }
parking_lot = "0.12"

# Rocksdb dependencies
rocksdb = { version = "0.19.0", optional = true }
bincode = { version = "^1.3.3", optional = true }
