[package]
name = "indradb-lib"
version = "4.0.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
description = "A graph database library"
homepage = "https://indradb.github.io"
repository = "https://github.com/indradb/indradb"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]
license = "MPL-2.0"
edition = "2021"
readme = "README.md"

[lib]
name = "indradb"
path = "src/lib.rs"

[features]
default = []
rocksdb-datastore = ["rocksdb", "bincode"]
test-suite = []
bench-suite = ["rand"]

[dependencies]
byteorder = "^1.4.2"
internment = "0.8.6"
once_cell = "^1.17"
rmp-serde = "^1.1.1"
serde = { version = "^1.0.57", features = ["derive"] }
serde_json = "^1.0.57"
tempfile = "^3.2.0"
uuid = { version = "^1.2.2", features = ["v1", "serde"] }

# Rocksdb dependencies
rocksdb = { version = "0.23.0", optional = true }
bincode = { version = "^1.3.3", optional = true }

# Benchmark dependencies
rand = { version = "0.8.5", optional = true }
