[package]
name = "indradb"
version = "3.0.2"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
description = "A graph database server"
homepage = "https://indradb.github.io"
repository = "https://github.com/indradb/indradb"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]
license = "MPL-2.0"
edition = "2021"
readme = "../README.md"

[[bin]]
name = "indradb-server"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
tonic = "0.5.2"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
serde_json = "^1.0.57"

[dependencies.indradb-lib]
path = "../lib"
version = "3.0.2"
features = ["rocksdb-datastore"]

[dependencies.indradb-proto]
path = "../proto"
version = "3.0.2"
features = ["server"]