[package]
name = "indradb"
version = "4.0.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
description = "A graph database server"
homepage = "https://indradb.github.io"
repository = "https://github.com/indradb/indradb"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]
license = "MPL-2.0"
edition = "2021"
readme = "../README.md"

[[bin]]
name = "indradb-server"
path = "src/main.rs"

[dependencies]
clap = "2.34.0"
tonic = "0.8.3"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }

log = "0.4.0"
env_logger = "0.9.0"

[dev-dependencies]
serde_json = "1.0.91"

[dependencies.indradb-lib]
path = "../lib"
version = "4.0.0"
features = ["rocksdb-datastore"]

[dependencies.indradb-proto]
path = "../proto"
version = "4.0.0"
features = ["server"]