[package]
name = "indradb"
version = "4.0.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
description = "A graph database server"
homepage = "https://indradb.github.io"
repository = "https://github.com/indradb/indradb"
keywords = ["graph", "database", "graph-database"]
categories = ["database", "database-implementations"]
license = "MPL-2.0"
edition = "2021"
readme = "../README.md"

[[bin]]
name = "indradb-server"
path = "src/main.rs"

[dependencies]
clap = "2.34.0"
tonic = "0.12.3"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
serde_json = "1.0.135"

[dependencies.indradb-lib]
path = "../lib"
version = "4.0.0"
features = ["rocksdb-datastore"]

[dependencies.indradb-proto]
path = "../proto"
version = "4.0.0"
features = ["server"]
