[package]
name = "indradb-plugin-hello-world"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indradb-plugin-host = { path = "../host" }
indradb-lib = { path = "../../lib" }
serde_json = "^1.0.57"
