[package]
name = "indradb-plugin-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indradb-proto = { path = "../../proto" }
serde_json = "^1.0.57"
tempdir = "0.3.7"
tokio = { version = "1.11.0", features = ["rt-multi-thread"] }
tonic = "0.5.2"
